--- a/UnitTest.dproj
+++ b/UnitTest.dproj
@@ -81,7 +81,8 @@
 			<DelphiCompile Include="$(MainSource)">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
-			<DCCReference Include="domain\UInvoiceController.pas"/>
+			<DCCReference Include="domain\UClient.pas"/>
+			<DCCReference Include="domain\UAddress.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
